Bug 370416 - <textPath> not updating when referenced path changed.r=longsonr, sr=sicking